# jbigkit

./: ChangeLog  Makefile  configure.ac
debian/: changelog  control
debian/patches/: 0007-update-debian-changelog.patch  allNewMainMakefile.diff  ld-library-path.diff  manpageTypo.diff  pbmtoolsMakefile.diff  series  shared-lib.diff  unusedResultPedantry.diff
libjbig/: Makefile  jbig.c  jbig.h  jbig85.c  jbig_ar.c  tstcodec.c  tstcodec85.c  tstjoint.c
pbmtools/: Makefile  jbgtopbm.c  jbgtopbm85.c  pbmtojbg.c  pbmtojbg85.c
